--- a/papers/Theory/Theory.tex
+++ b/papers/Theory/Theory.tex
@@ -207,6 +207,7 @@ This efficient interpolation is one of the great advantages of using this techni
 
 The main quantity we will use this interpolation for is the Hamiltonian:
 \begin{equation}
+	\label{eq:Theory_waninterp}
 	\tilde{H}_{nm}^{\bm{k}} = \tildeBlochBra{n} H \tildeBlochKet{m} = \sum_{\bm{R}} \eikr{R} \WanBra{n}{0}H\WanKet{n}{R},
 \end{equation}
 where the tilde is used to distinguish the $k$-space wavefunctions from BFs, and $\WanKet{n}{R}$ denote the WFs centered at unit cell identified by lattice translation $\bm{R}$.
