--- a/papers/references.bib
+++ b/papers/references.bib
@@ -6500,3 +6500,41 @@ year = {2013}
      year = {2016},
       url = {https://arxiv.org/abs/1607.07892}
 }
+
+@article{Park2015,
+abstract = {Despite its history, the microscopic mechanism for the Rashba spin-band splitting was not well understood. It was very recently pointed out that local orbital angular momentum (OAM) plays a crucial role in the Rashba effect. Subsequently, an effective Hamiltonian was proposed. The proposed Hamiltonian was found to not only explain all the known aspects of the Rashba phenomena but also correctly predict properties that were not known before. It brings about shifts from spin-based to OAM-based approaches in the understanding of the Rashba effect. Here, we review the developments in the new approach. Starting from a brief introduction, issues in the conventional understanding of the Rashba effect are discussed. It is then described in detail that local OAM results in significant electrostatic energy which along with the atomic spin-orbit coupling explains the Rashba effect. Experimental evidences for the existence of OAM from circular dichroism in angle resolved photoemission, thus the validity of the model, are also reviewed.},
+author = {Park, Seung Ryong and Kim, Changyoung},
+doi = {10.1016/j.elspec.2014.12.009},
+file = {:home/ponet/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Park, Kim - 2015 - Microscopic mechanism for the Rashba spin-band splitting Perspective from formation of local orbital angular momentum.pdf:pdf;:home/ponet/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Park, Kim - 2015 - Microscopic mechanism for the Rashba spin-band splitting Perspective from formation of local orbital angular momen(2).pdf:pdf},
+issn = {03682048},
+journal = {Journal of Electron Spectroscopy and Related Phenomena},
+keywords = {Circular dichroism in ARPES,Local orbital angular momentum,Rashba spin-band splitting},
+mendeley-groups = {PhD/GeTe},
+pages = {6--17},
+publisher = {Elsevier B.V.},
+title = {{Microscopic mechanism for the Rashba spin-band splitting: Perspective from formation of local orbital angular momentum}},
+url = {http://dx.doi.org/10.1016/j.elspec.2014.12.009},
+volume = {201},
+year = {2015}
+}
+
+@article{Kim2014,
+abstract = {The Rashba effect is spin degeneracy lift originated from spin-orbit coupling under inversion symmetry breaking and has been intensively studied for spintronics applications. However, easily implementable methods and corresponding materials for directional controls of Rashba splitting are still lacking. Here, we propose organic-inorganic hybrid metal halide perovskites as 3D Rashba systems driven by bulk ferroelectricity. In these materials, it is shown that the helical direction of the angular momentum texture in the Rashba band can be controlled by external electric fields via ferroelectric switching. Our tight-binding analysis and first-principles calculations indicate that S = 1/2 and J = 1/2 Rashba bands directly coupled to ferroelectric polarization emerge at the valence and conduction band edges, respectively. The coexistence of two contrasting Rashba bands having different compositions of the spin and orbital angular momentum is a distinctive feature of these materials. With recent experimental evidence for the ferroelectric response, the halide perovskites will be, to our knowledge, the first practical realization of the ferroelectric-coupled Rashba effect, suggesting novel applications to spintronic devices.},
+author = {Kim, Minsung and Im, Jino and Freeman, Arthur J and Ihm, Jisoon and Jin, Hosub},
+doi = {10.1073/pnas.1405780111},
+file = {:home/ponet/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Kim et al. - 2014 - Switchable S = 12 and J = 12 Rashba bands in ferroelectric halide perovskites.pdf:pdf},
+isbn = {1091-6490 (Electronic)$\backslash$r0027-8424 (Linking)},
+issn = {1091-6490},
+journal = {Proceedings of the National Academy of Sciences of the United States of America},
+keywords = {Calcium Compounds,Calcium Compounds: chemistry,Computer Simulation,Crystallization,Crystallization: methods,Electronics,Electronics: methods,Iron,Iron: chemistry,Methylamines,Methylamines: chemistry,Models, Chemical,Nanostructures,Nanostructures: chemistry,Organic Chemicals,Organic Chemicals: chemistry,Oxides,Oxides: chemistry,Titanium,Titanium: chemistry},
+mendeley-groups = {PhD/GeTe},
+number = {19},
+pages = {6900--4},
+pmid = {24785294},
+title = {{Switchable S = 1/2 and J = 1/2 Rashba bands in ferroelectric halide perovskites.}},
+url = {http://www.pnas.org/cgi/content/long/111/19/6900},
+volume = {111},
+year = {2014}
+}
+
+
