--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -51,7 +51,9 @@
 % \addbibresource{./Cr/bib.bib}
 
 %to be used in main text
-\newcommand{\ket}[1]{$\left|#1\right\rangle$}
+% \newcommand{\ket}[1]{$\left|#1\right\rangle$}
+% \newcommand{\bra}[1]{$\langle #1\rvert$}
+\newcommand{\ket}[1]{$|#1\rangle$}
 \newcommand{\bra}[1]{$\langle #1\rvert$}
 
 %To be used within math env
@@ -59,6 +61,10 @@
 \newcommand{\Bra}[1]{\left\langle #1\right\rvert}
 \newcommand{\BraKet}[1]{\left\langle #1\rvert #1\right\rangle}
 \newcommand{\Sandwich}[2]{\left\langle #1\rvert #2\right\rangle}
+% \newcommand{\Ket}[1]{|#1\rangle}
+% \newcommand{\Bra}[1]{\langle #1\rvert}
+% \newcommand{\BraKet}[1]{\langle #1\rvert #1\rangle}
+% \newcommand{\Sandwich}[2]{\langle #1\rvert #2\rangle}
 
 \newcommand{\kpoint}{$\bold{K}$ }
 \newcommand{\Kpoint}{$\bold{K'}$ }
